--- a/Demo/Readme
+++ b/Demo/Readme
@@ -1,1 +1,2 @@
 This is a demo folder for running the GUI application and seeing an example of the results produced. Images found in this demo are a subset of images pulled from those used in the associated manuscript. 
+The pixel size of the images in this set is 0.1032um 
